<resources>
    <string name="app_name">GreenPass</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="vaccines">Vaccines</string>
    <string name="title_activity_covid_info_tab">CovidInfoTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="explore">Explore</string>
    <string name="vaccine">Vaccine</string>
    <string name="news">News</string>
    <string name="infractions">Infractions</string>
    <string name="covid_info">Covid Info</string>
    <string name="geofence">Geofence</string>
    <string name="green_pass">Green Pass</string>
    <string name="no_infractions_present">No infractions present</string>

    <!-- Animations -->
    <string name="country_card_transition_name">country_card_%1$s</string>
    <string name="country_card_detail_transition_name">country_card_detail</string>

    <string name="vaccine_card_transition_name">country_card_%1$s</string>
    <string name="vaccine_card_detail_transition_name">country_card_detail</string>

    <string name="news_card_transition_name">country_card_%1$s</string>
    <string name="news_card_detail_transition_name">country_card_detail</string>

    <string name="admin_card_transition_name">country_card_%1$s</string>
    <string name="admin_card_detail_transition_name">country_card_detail</string>
</resources>