<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_userinfo"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/green_pass" />
        <item
            android:id="@+id/nav_covidinfo"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/covid_info" />
        <item
            android:id="@+id/nav_geofence"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/geofence" />
        <item
            android:id="@+id/nav_infractions"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/infractions" />
    </group>
</menu>